<?xml version="1.0"?>
<package>
  <name>osc</name>
  <version>1.4.0</version>
  <description>The osc package</description>
  <maintainer email="akihiro.aritoshi@tier4.jp">Akihiro Aritoshi</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
